
[Changes for 0.960 - Nov 12, 2006]
* Bug fixes, etc.
    - myldr/Makefile.PL fix: Clean up myldr/usernamefrompwuid.h.
    - Silence warning in myldr/internals.c.
    - Silence warnings seen on Irix from myldr/env.c.
    - Skip most tests in 10-parl-generation.t if there is no parl.

* New features
    - Adressing RT ticket #6612: Now using getpwuid() to determine the
      user name if supported by the OS.

[Changes for 0.959 - Nov 12, 2006]
* This is just a hotfix release because 0.958 lacked META.yml. One day, I will
  switch from Module::Install to Module::Build...

[Changes for 0.958 - Oct 25, 2006]
* Bug fixes, etc.
    - myldr/Makefile.PL fix: make static.o depend on mktmpdir.c, my_perl.c,
      my_par.c. (Roderich Schupp)
    - Modules included with the -M option to pp were previously scanned
      for dependencies but not mapped through the
      %Module::ScanDeps::Preload hash for custom dependencies. That's
      fixed now.
    - $ENV{PAR_RUN} isn't set by PAR::Packer any more because nothing in
      the PAR sources uses it. $ENV{PAR_RUN} is no longer used by PAR
      at all.
    - Unified the environment variables which are looked at for
      finding the system's temporary directory.

* New features
    - During the build process, PAR appends stripped down copies of parl
      (and parldyn if applicable) to the data classes
      PAR::StrippedPARL::Static and ::Dynamic. These
      parls-without-embedded-modules are used for packaging so the formerly
      embedded modules are now packaged from the packaging system. (Instead
      of stemming from the system where PAR/parl was built.)
    - The "use PAR { repository => $url };" syntax now also supports
      the use of user-constructed PAR::Repository::Client objects instead
      of an URL.
    - The -F (module code filter) option now supports selective filtering
      of modules. The syntax is "-F FILTER=REGEX" or - as before -